--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ defaults:
     values:
       image: true
 
-title: Minimalism
-name: minimalism
-description: Minimalism is a jekyll theme for minimalist
+title: SHIGOPHILO
+name: ShiGoPhilo
+description: 文能提笔控萝莉 武能床上定人妻
 
-github: https://github.com/showzeng/Minimalism
+github: https://github.com/shigophilo
 rss: true
 
 plugins:
@@ -34,3 +34,6 @@ exclude:
   - vendor
   - Gemfile
   - Gemfile.lock
+theme: jekyll-theme-minimalism
+remote_theme: showzeng/Minimalism
+
