--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ name: ShiGoPhilo
 description: 文能提笔控萝莉 武能床上定人妻
 
 github: https://github.com/shigophilo
+email: mailto:shigophilo@gmail.com
 rss: true
 
 plugins:
