--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ defaults:
 
 title: SHIGOPHILO
 name: ShiGoPhilo
-description: 文能提笔控萝莉 武能床上定人妻
+description: 本人代码风骚;  一行代码、三个报错、七个警告  调试必定整崩IDE、搞死服务器，一个人的工作干出了八个人的量，最大的贡献就是带动很多程序员兄弟就业！
 
 github: https://github.com/shigophilo
 email: mailto:shigophilo@gmail.com
